# voclet

./: .bazelrc  .gitignore  AGENT.md  AGENTS.md  LICENSE  MODULE.bazel  PRIVACY_POLICY.md  README.md  STORE_LISTING.md  settings.gradle.kts
app/: BUILD.bazel  build.gradle.kts  google-services.json  proguard-rules.pro
app/schemas/com.github.mwiest.voclet.data.database.VocletDatabase/: 1.json  2.json  3.json
app/src/androidTest/java/com/github/mwiest/voclet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/mwiest/voclet/: MainActivity.kt  VocletApplication.kt
app/src/main/java/com/github/mwiest/voclet/data/: VocletRepository.kt
app/src/main/java/com/github/mwiest/voclet/ui/: AppNavigation.kt
app/src/main/java/com/github/mwiest/voclet/ui/theme/: Color.kt  (+2 more)
app/src/main/java/com/voclet/: MainActivity.kt
app/src/main/res/anim/: splash_exit.xml
app/src/main/res/drawable/: fox_body.xml  ic_add.xml  ic_arrow_forward.xml  ic_delete.xml  ic_edit.xml  ic_fill_in_blank.xml  ic_flashcard_flip.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_match_pairs.xml  ic_more_vert.xml  ic_settings.xml  ic_spelling_scramble.xml  ic_voclet_logo.xml  ic_voice_challenge.xml  splash_icon_unclipped.xml  voclet_logo.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/github/mwiest/voclet/: ExampleUnitTest.kt
(+46 files in other folders)
