module(
    name = "voclet",
    version = "0.1.0",
)

bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_java", version = "6.6.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.8")


android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension"
)
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
)
