load("@rules_android//rules:rules.bzl", "android_binary", "android_library")

android_library(
    name = "lib",
    srcs = glob(["src/main/java/com/voclet/**/*.kt"]),
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**/*"]),
)

android_binary(
    name = "app",
    manifest = "src/main/AndroidManifest.xml",
    deps = [":lib"],
)
